testsuite/vhdl/parser_rules/test_data/numeric_literal_failure/based_literal_001.expected
In 'numeric_literal_failure/based_literal_001.input':2:11: parse error: Test Suite Full Match Error! Unparsed input left!
   2| 016#0_FF#e-23
    |           ^ <<-- here
